test/types/records/comparisons/recordTypeParamComp2.good
recordTypeParamComp2.chpl:8: error: unresolved call '<(R(int(64),42), R(int(64),45))'
$CHPL_HOME/modules/internal/ChapelBase.chpl:3461: note: this candidate did not match: <(r1: record, r2: r1.type)
$CHPL_HOME/modules/internal/ChapelBase.chpl:3461: note: because where clause evaluated to false
recordTypeParamComp2.chpl:8: note: other candidates are:
$CHPL_HOME/modules/internal/ChapelBase.chpl:361: note:   <(a: integral, b: integral)
$CHPL_HOME/modules/internal/ChapelBase.chpl:370: note:   <(a: integral, param b: integral)
note: and 26 other candidates, use --print-all-candidates to see them
